--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ qacct:"p-4NNmuUj07pZTW"
                  <div id="slogan"><h1><b>Enabling waste management on your palm.</b></h1></div>
                  <a href="Promo.mp4" target="blank" class="cta1" id="button_more">Watch Promo!</a>
                  
-                 <img src="images/homescreen.png" class="img-responsive" id="home_image" alt="img">
+                 <img src="images/menu.png" class="img-responsive" id="home_image" alt="img">
             </div> <div class="clearfix"></div>
         </div>
     </div>
@@ -180,8 +180,8 @@ qacct:"p-4NNmuUj07pZTW"
         <div class="container">
             <div class="row"  >
                 <div class="col-sm-6 col-md-6  col-lg-6" style="margin-top:100px;">
-                  <img src="images/features1b.png" class="img-responsive image_back" id="features1a_image" alt="img">
-                  <img src="images/features1a.png" class="img-responsive image_front" id="features1b_image" alt="img">
+                  <img src="images/signup.png" class="img-responsive image_back" id="features1a_image" alt="img">
+                  <img src="images/main_pg.png" class="img-responsive image_front" id="features1b_image" alt="img">
                 </div>
                 
                 <div class="col-sm-6 col-md-6 col-lg-6" id="features_1_content">
