--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ qacct:"p-4NNmuUj07pZTW"
             <div class="row"  >
                 <div class="col-sm-6 col-md-6  col-lg-6" style="margin-top:100px;">
                   <img src="images/signup.png" class="img-responsive image_back" id="features1a_image" alt="img">
-                  <img src="images/main_pg.png" class="img-responsive image_front" id="features1b_image" alt="img">
+                  <img src="images/mai_pg.png" class="img-responsive image_front" id="features1b_image" alt="img">
                 </div>
                 
                 <div class="col-sm-6 col-md-6 col-lg-6" id="features_1_content">
