--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ qacct:"p-4NNmuUj07pZTW"
         <div class="container">
             <div class="row"  >
                 <div class="col-sm-6 col-md-6  col-lg-6" style="margin-top:100px;">
-                  <img src="images/signup.png" class="img-responsive image_back" id="features1a_image" alt="img">
+                  <img src="images/feature1b.png" class="img-responsive image_back" id="features1a_image" alt="img">
                   <img src="images/main_pg.png" class="img-responsive image_front" id="features1b_image" alt="img">
                 </div>
                 
