--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ qacct:"p-4NNmuUj07pZTW"
                  <div id="slogan"><h1><b>Enabling waste management on your palm.</b></h1></div>
                  <a href="Promo.mp4" target="blank" class="cta1" id="button_more">Watch Promo!</a>
                  
-                 <img src="images/menu.png" class="img-responsive" id="home_image" alt="img">
+                 <img src="images/home1.png" class="img-responsive" id="home_image" alt="img">
             </div> <div class="clearfix"></div>
         </div>
     </div>
