--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Klear</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>  
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="icon" href="images/icon logo.png">
+    <link rel="icon" href="images/icon_logo.png">
     <link href="css/bootstrap.css" rel="stylesheet" media="screen">
     <link href="css/style.css" rel="stylesheet" media="screen">
     <link href="css/animate.css" rel="stylesheet" media="screen">
