--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ qacct:"p-4NNmuUj07pZTW"
             <div id="homescreen" class="col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
                  <div id="logo"><a href="#home"><img src="images/klear.png" width="200" alt="logo"></a></div>
                  <div id="slogan"><h1><b>Enabling waste management on your palm.</b></h1></div>
-                 <a href="https://youtu.be/4FrZyM0b0Z4" target="blank" class="cta1" id="button_more">Watch Promo!</a>
+                 <a href="https://youtu.be/8t6qxZ5H3LI" target="blank" class="cta1" id="button_more">Watch Promo!</a>
                  
                  <img src="images/home1.png" class="img-responsive" id="home_image" alt="img">
             </div> <div class="clearfix"></div>
